--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -1,3 +1,14 @@
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
+}
+
 a {
   color: black;
   &:hover {
@@ -22,4 +33,7 @@ a {
 }
 .mra {
   margin-right: auto;
+}
+.tac {
+  text-align: center;
 }
