login 화면 form으로 변경

--- a/src/ui/Login/Login.scoped.scss
+++ b/src/ui/Login/Login.scoped.scss
@@ -15,3 +15,11 @@ h2 {
   flex-direction: row;
   position: relative;
 }
+
+form {
+  label {
+    display: inline-block;
+    margin-left: 10%;
+    width: 90%;
+  }
+}
