--- a/src/ui/Login/Login.scoped.scss
+++ b/src/ui/Login/Login.scoped.scss
@@ -1,4 +1,4 @@
-@use '@assets/scss/variable.scss';
+@use '@assets/scss/variable';
 .login {
   width: 100%;
   height: 100%;
@@ -9,17 +9,28 @@ h2 {
 .container {
   width: 90%;
   height: 40%;
-  margin: 5% 0% 0% 5%;
+  margin: 5% auto 0%;
   border-radius: 8px;
   background-color: variable.$G-container-bg;
   flex-direction: row;
   position: relative;
+  max-width: 400px;
 }
 
 form {
   label {
+    width: 70%;
+    margin: 0% 15% 1% 15%;
     display: inline-block;
-    margin-left: 10%;
-    width: 90%;
+  }
+  input {
+    width: 70%;
+    border-radius: unset;
+    margin: 0% 15% 2% 15%;
+  }
+  button {
+    width: 70%;
+    margin: 6% 15% 0% 15%;
+    height: 10%;
   }
 }
