--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -4,7 +4,7 @@ $G-breakpoint-tablet: 768px;
 $G-breakpoint-desktop: 992px;
 
 $G-container-bg: #eee;
-$G-primary-color: #eee;
+$G-primary-color: black;
 $G-secondary-color: #eee;
 
 $G-mobile-default-font-size: calc(
