--- a/src/ui/Login/Login.scoped.scss
+++ b/src/ui/Login/Login.scoped.scss
@@ -20,17 +20,17 @@ h2 {
 form {
   label {
     width: 70%;
-    margin: 0% 15% 1% 15%;
+    margin: 0 auto 1%;
     display: inline-block;
   }
   input {
     width: 70%;
+    margin: 0 auto 2%;
     border-radius: unset;
-    margin: 0% 15% 2% 15%;
   }
   button {
     width: 70%;
-    margin: 6% 15% 0% 15%;
     height: 10%;
+    margin: 6% auto 0;
   }
 }
