--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -12,6 +12,16 @@ input {
   margin: 0;
 }
 
+h1 {
+  font-size: 2rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
+h3 {
+  font-size: 1.2rem;
+}
+
 input {
   padding: 0.3rem;
   border: 1px solid #ccc;
