--- a/src/ui/Sider/MySider.scoped.scss
+++ b/src/ui/Sider/MySider.scoped.scss
@@ -1,4 +1,4 @@
-.aside {
+.container {
   width: 100%;
   height: 100%;
   z-index: 2;
@@ -16,4 +16,12 @@ aside {
   border-right: 1px solid #ccc;
   position: absolute;
   background-color: white;
+  // transition: transform 0.5s ease;
+  // transform: translateX(0);
+  h3 {
+    margin: 8% 0 0 8%;
+  }
 }
+// .slide {
+//   transform: translateX(-0%);
+// }
