--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -1,4 +1,5 @@
 @use './mixin';
+@use './variable';
 @include mixin.mobile;
 p,
 h1,
@@ -10,6 +11,14 @@ h6,
 input {
   padding: 0;
   margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: variable.$G-primary-text-color;
 }
 
 h1 {
@@ -25,6 +34,10 @@ h3 {
 input {
   padding: 0.3rem;
   border: 1px solid #ccc;
+  &:hover,
+  &:active {
+    border: 1px solid variable.$G-secondary-color;
+  }
 }
 
 a {
