--- a/src/ui/Header/MyHeader.scoped.scss
+++ b/src/ui/Header/MyHeader.scoped.scss
@@ -1,7 +1,11 @@
+@use '@assets/scss/variable';
 .my-header {
   width: 100%;
   height: 7%;
-  box-shadow: 0px 0px 7px 4px rgba(0, 0, 0, 0.25);
+  background-color: variable.$G-primary-color;
+  color: variable.$G-primary-text-color;
+  border-bottom: 1px solid variable.$G-secondary-color;
+  // box-shadow: 0px 0px 7px 4px rgba(255, 255, 255, 0.5);
 
   .container {
     width: 100%;
@@ -16,6 +20,7 @@
     margin-left: 4%;
   }
   .login-icon {
+    color: variable.$G-primary-text-color;
     padding: 4%;
     margin-right: 4%;
   }
