--- a/src/ui/Login/Register.scoped.scss
+++ b/src/ui/Login/Register.scoped.scss
@@ -1,5 +1,5 @@
 @use '@assets/scss/variable';
-.login {
+.register {
   width: 100%;
   height: 100%;
   background-color: variable.$G-primary-color;
@@ -9,14 +9,14 @@ h2 {
 }
 .container {
   width: 90%;
-  height: 45%;
+  height: auto;
   margin-bottom: 40%;
-  // margin: auto;
   border-radius: 8px;
 
   background-color: variable.$G-container-bg;
   flex-direction: row;
   position: relative;
+  min-height: 45%;
   max-width: 400px;
 }
 
