--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -12,4 +12,10 @@ $G-secondary-text-color: black;
 $G-mobile-default-font-size: calc(
   16px + (24 - 16) * (100vw - 400px) / (800 - 400)
 );
+
+$G-desktop-default-font-size: calc(
+  16px + (24 - 16) * (100vw - 1024px) / (1920 - 1024)
+);
+
 $G-mobile-font-sizes: 2em, 1.5em, 1em, 0.8em, 0.6em;
+$G-desktop-font-sizes: 2.5em, 2em, 1.5em, 1em, 0.9em;
