--- a/src/ui/Header/MyHeader.scoped.scss
+++ b/src/ui/Header/MyHeader.scoped.scss
@@ -1,4 +1,5 @@
 @use '@assets/scss/variable';
+@use '@assets/scss/mixin';
 .my-header {
   width: 100%;
   height: 7%;
@@ -12,14 +13,23 @@
     height: 100%;
   }
   b {
+    @include mixin.desktop {
+      margin-left: 4%;
+    }
     align-self: center;
   }
 
   .menu-icon {
+    @include mixin.desktop {
+      padding: 1%;
+    }
     padding: 4%;
     margin-left: 4%;
   }
   .login-icon {
+    @include mixin.desktop {
+      padding: 1%;
+    }
     color: variable.$G-primary-text-color;
     padding: 4%;
     margin-right: 4%;
