--- a/src/ui/Login/Login.scoped.scss
+++ b/src/ui/Login/Login.scoped.scss
@@ -1,23 +1,36 @@
 @use '@assets/scss/variable';
+@use '@assets/scss/mixin';
 .login {
   width: 100%;
   height: 100%;
+  @include mixin.desktop {
+    flex-direction: column;
+  }
   background-color: variable.$G-primary-color;
 }
 h2 {
   margin-bottom: 5%;
+  @include mixin.desktop {
+    margin-bottom: 1%;
+  }
 }
 .container {
+  @include mixin.mobile {
+    margin-bottom: 40%;
+    max-width: 400px;
+  }
+  @include mixin.desktop {
+    margin-bottom: 10%;
+    max-width: 600px;
+  }
   width: 90%;
   height: 45%;
-  margin-bottom: 40%;
-  // margin: auto;
+
   border-radius: 8px;
 
   background-color: variable.$G-container-bg;
   flex-direction: row;
   position: relative;
-  max-width: 400px;
 }
 
 form {
@@ -34,7 +47,7 @@ form {
   }
   button {
     width: 70%;
-    height: 10%;
+    height: 12%;
     margin: 2% auto 0;
     background-color: variable.$G-primary-color;
     color: variable.$G-primary-text-color;
