--- a/src/ui/Login/Register.scoped.scss
+++ b/src/ui/Login/Register.scoped.scss
@@ -1,23 +1,33 @@
 @use '@assets/scss/variable';
+@use '@assets/scss/mixin';
 .register {
   width: 100%;
   height: 100%;
   background-color: variable.$G-primary-color;
+  flex-direction: column;
 }
 h2 {
+  @include mixin.desktop {
+    margin-bottom: 1%;
+  }
   margin-bottom: 5%;
 }
 .container {
+  @include mixin.mobile {
+    margin-bottom: 40%;
+    max-width: 400px;
+  }
+  @include mixin.desktop {
+    margin-bottom: 10%;
+    max-width: 600px;
+  }
   width: 90%;
   height: auto;
-  margin-bottom: 40%;
   border-radius: 8px;
-
   background-color: variable.$G-container-bg;
   flex-direction: row;
   position: relative;
   min-height: 45%;
-  max-width: 400px;
 }
 
 form {
@@ -33,14 +43,20 @@ form {
     border-radius: 8px;
   }
   button {
+    @include mixin.mobile {
+      max-height: 36px;
+    }
+    @include mixin.desktop {
+      max-height: 48px;
+    }
     width: 70%;
-    height: 10%;
+    height: 8vw;
+
     margin: 2% auto 0;
     background-color: variable.$G-primary-color;
     color: variable.$G-primary-text-color;
     border: 1px solid #eee;
     border-radius: 8px;
-    // padding: 4%;
   }
 
   a {
