login reducer -> auth로 명칭 변경

--- a/src/ui/Header/MyHeader.scoped.scss
+++ b/src/ui/Header/MyHeader.scoped.scss
@@ -1,6 +1,6 @@
 @use '@assets/scss/variable';
 @use '@assets/scss/mixin';
-.my-header {
+header {
   width: 100%;
   height: 7%;
   background-color: variable.$G-primary-color;
