회원가입 / 패스워드 재설정 화면 추가

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -19,18 +19,18 @@ h3,
 h4,
 h5,
 h6 {
-  color: variable.$G-primary-text-color;
+  // color: variable.$G-primary-text-color;
 }
 
-h1 {
-  font-size: 2rem;
-}
-h2 {
-  font-size: 1.5rem;
-}
-h3 {
-  font-size: 1.2rem;
-}
+// h1 {
+//   font-size: 2rem;
+// }
+// h2 {
+//   font-size: 1.5rem;
+// }
+// h3 {
+//   font-size: 1.2rem;
+// }
 
 a {
   color: black;
